--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -5,3 +5,4 @@ ansible_ssh_private_key_file: "{{ ssh_private_key_file }}"
 
 remote_user: ubuntu
 cache_time: 604800 # one week in seconds
+ssh_public_key_file: ./ansible.pub
